[package]
name = "sky-daemon"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sky Panel node daemon: drives Docker on a game-server host on behalf of panel-api."

[[bin]]
name = "sky-daemon"
path = "src/main.rs"

[dependencies]
skyperf-core = { path = "../skyperf-core" }
protocol = { path = "../protocol" }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = "0.24"
futures-util = "0.3"

async-trait = "0.1"
anyhow = "1"
thiserror = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

httparse = "1"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

# MariaDB/MySQL admin client for provisioning per-user databases on the node's
# local database server. `minimal-rust` = pure-Rust flate2 backend, no TLS and
# no C dependencies (connections to the local DB are plaintext over loopback).
mysql_async = { version = "0.37", default-features = false, features = ["minimal-rust"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
