[package]
name = "protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Signed wire protocol shared between panel-api and sky-daemon."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
subtle = "2"
thiserror = "1"

[dev-dependencies]
