[package]
name = "skyperf-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Perf-sensitive helpers linked directly into sky-daemon: recursive directory sizing, tar+zstd backups, log tailing."

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
